--- a/00-module/vue3-post/package.json
+++ b/00-module/vue3-post/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "db": "json-server db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.5.13",
@@ -23,6 +25,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
+    "json-server": "^1.0.0-beta.3",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
