--- a/00-module/vue3-post/package.json
+++ b/00-module/vue3-post/package.json
@@ -25,7 +25,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
